# demos

./: .gitmodules
based.cooking/: Cargo.toml  README.md  devbox.json
based.cooking/packer/: Cargo.toml  README.md  justfile
based.cooking/packer/sql/: recipes.surql
based.cooking/packer/src/: args.rs  db.rs  lib.rs  main.rs  pack.rs  recipe.rs
based.cooking/pages/: bun.lockb  justfile  package.json  wrangler.toml
based.cooking/web/: README.md  astro.config.mjs  bun.lockb  justfile  package.json  tailwind.config.mjs  tsconfig.json
based.cooking/web/app/: App.svelte  Navbar.svelte  Page.svelte  router.ts  states.ts
based.cooking/web/app/components/: RecipeCard.svelte  RecipePanel.svelte
based.cooking/web/app/pages/: Recipe.svelte  Recipes.svelte  Tag.svelte
based.cooking/web/public/: pix
based.cooking/web/public/data/: index.surql  remove_index.surql  search.surql
based.cooking/web/public/queries/: search.surql  text_index.surql  title_index.surql
based.cooking/web/src/: types.ts
based.cooking/web/src/components/: Home.svelte  HomePanel.svelte  RecipeBody.svelte  RecipeCard.svelte  RecipeGrid.svelte  RecipeHead.svelte  TagBadge.svelte  TagCloud.svelte  TagHead.svelte
based.cooking/web/src/content/: config.ts  helper.ts
based.cooking/web/src/islands/: states.ts  types.ts
based.cooking/web/src/layouts/: Layout.astro  Markdown.astro
based.cooking/web/src/pages/: app.astro  index.astro  init.surql.ts
based.cooking/web/surreal/: client.ts  helper.ts  states.ts
dialogue/: Cargo.toml  devbox.json
dialogue/packer/: Cargo.toml
dialogue/packer/src/: args.rs  dialogue.rs  lib.rs  main.rs  pack.rs
dialogue/pages/: justfile  wrangler.toml
dialogue/web/: astro.config.mjs  bun.lockb  package.json  surreal  tsconfig.json
dialogue/web/public/queries/: init.surql  topic1.surql  topic2.surql  topic3.surql  topic4.surql  topic5.surql
dialogue/web/src/components/: DialoguePanel.svelte  DialogueSelect.svelte  HomePanel.svelte  SentenceBubble.svelte
dialogue/web/src/islands/: router.ts  (+1 more)
(+25 files in other folders)
