[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/demos/dialogue"
repository = "https://github.com/edger-dev/demos/dialogue"
authors = ["YJ Park <yjpark@gmail.com>"]

[workspace]
members = [
    "packer",
]
resolver = "2"

[workspace.dependencies]
edger_tui_app = { path = "../../crates/tui/app" }
# edger_tui_app = { git = "https://github.com/edger-dev/crates", branch = "main" }

tracing = "0.1"
clap = { version = "4", features = [ "derive" ] }
snafu = "0.8"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

walkdir = "2"